--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@ summary {
 <p><a href="Lab1revised_bal.html">Lab 1</a></p>
 <p><a href="lab2_bal.html">Lab 2</a></p>
 <p><a href="Lab3A.html">Lab 3A</a></p>
+<p><a href="Lab3B.html">Lab 3B</a></p>
 <p>Application written in R <span class="citation">(R Core Team 2015)</span></p>
 <div id="references" class="section level1 unnumbered">
 <h1>References</h1>
