--- a/Lab3B.html
+++ b/Lab3B.html
@@ -548,6 +548,325 @@ surveys_sml</code></pre>
   filter(hindfoot_cm &lt; 3) %&gt;%
   select(species_id, hindfoot_cm)</code></pre>
 </div>
+<div id="split-apply-combine" class="section level3">
+<h3>Split-apply-combine</h3>
+<pre class="r"><code>surveys %&gt;%
+  group_by(sex, species_id) %&gt;%
+  summarize(mean_weight = mean(weight),
+            min_weight = min(weight)) %&gt;%
+  arrange(desc(min_weight))</code></pre>
+<pre><code>## `summarise()` regrouping output by &#39;sex&#39; (override with `.groups` argument)</code></pre>
+<pre><code>## # A tibble: 92 x 4
+## # Groups:   sex [3]
+##    sex   species_id mean_weight min_weight
+##    &lt;chr&gt; &lt;chr&gt;            &lt;dbl&gt;      &lt;dbl&gt;
+##  1 F     SS                57           57
+##  2 F     SH                78.8         30
+##  3 &lt;NA&gt;  PL                25           25
+##  4 M     SF                53.4         24
+##  5 F     PX                20           20
+##  6 M     PH                31.5         18
+##  7 M     PX                18           18
+##  8 &lt;NA&gt;  PI                18           18
+##  9 M     RF                12.4         11
+## 10 M     RX                15.5         11
+## # … with 82 more rows</code></pre>
+</div>
+<div id="counting" class="section level3">
+<h3>Counting</h3>
+<pre class="r"><code>surveys %&gt;%
+count(sex, species) %&gt;%
+arrange(species, desc(n))</code></pre>
+<pre><code>## # A tibble: 81 x 3
+##    sex   species             n
+##    &lt;chr&gt; &lt;chr&gt;           &lt;int&gt;
+##  1 F     albigula          675
+##  2 M     albigula          502
+##  3 &lt;NA&gt;  albigula           75
+##  4 &lt;NA&gt;  audubonii          75
+##  5 F     baileyi          1646
+##  6 M     baileyi          1216
+##  7 &lt;NA&gt;  baileyi            29
+##  8 &lt;NA&gt;  bilineata         303
+##  9 &lt;NA&gt;  brunneicapillus    50
+## 10 &lt;NA&gt;  chlorurus          39
+## # … with 71 more rows</code></pre>
+</div>
+<div id="challenge-2" class="section level3">
+<h3>Challenge</h3>
+<p>#1</p>
+<pre class="r"><code>surveys %&gt;%
+  count(plot_type)</code></pre>
+<pre><code>## # A tibble: 5 x 2
+##   plot_type                     n
+##   &lt;chr&gt;                     &lt;int&gt;
+## 1 Control                   15611
+## 2 Long-term Krat Exclosure   5118
+## 3 Rodent Exclosure           4233
+## 4 Short-term Krat Exclosure  5906
+## 5 Spectab exclosure          3918</code></pre>
+</div>
+</div>
+<div id="section" class="section level1">
+<h1>2</h1>
+<pre class="r"><code>surveys %&gt;%
+  filter(!is.na(hindfoot_length)) %&gt;%
+  group_by(species_id) %&gt;%
+  summarize(
+    mean_hindfoot_length = mean(hindfoot_length),
+    min_hindfoot_length = min(hindfoot_length),
+    max_hindfoot_length = min(hindfoot_length),
+    n = n()
+    )</code></pre>
+<pre><code>## `summarise()` ungrouping output (override with `.groups` argument)</code></pre>
+<pre><code>## # A tibble: 25 x 5
+##    species_id mean_hindfoot_length min_hindfoot_length max_hindfoot_length     n
+##    &lt;chr&gt;                     &lt;dbl&gt;               &lt;dbl&gt;               &lt;dbl&gt; &lt;int&gt;
+##  1 AH                         33                    31                  31     2
+##  2 BA                         13                     6                   6    45
+##  3 DM                         36.0                  16                  16  9972
+##  4 DO                         35.6                  26                  26  2887
+##  5 DS                         49.9                  39                  39  2132
+##  6 NL                         32.3                  21                  21  1074
+##  7 OL                         20.5                  12                  12   920
+##  8 OT                         20.3                  13                  13  2139
+##  9 OX                         19.1                  13                  13     8
+## 10 PB                         26.1                   2                   2  2864
+## # … with 15 more rows</code></pre>
+</div>
+<div id="section-1" class="section level1">
+<h1>3</h1>
+<pre class="r"><code>surveys %&gt;%
+  filter(!is.na(weight)) %&gt;%
+  group_by(year) %&gt;%
+  filter(weight == max(weight)) %&gt;%
+  select(year, genus, species, weight) %&gt;%
+  arrange(year)</code></pre>
+<pre><code>## # A tibble: 27 x 4
+## # Groups:   year [26]
+##     year genus     species     weight
+##    &lt;dbl&gt; &lt;chr&gt;     &lt;chr&gt;        &lt;dbl&gt;
+##  1  1977 Dipodomys spectabilis    149
+##  2  1978 Neotoma   albigula       232
+##  3  1978 Neotoma   albigula       232
+##  4  1979 Neotoma   albigula       274
+##  5  1980 Neotoma   albigula       243
+##  6  1981 Neotoma   albigula       264
+##  7  1982 Neotoma   albigula       252
+##  8  1983 Neotoma   albigula       256
+##  9  1984 Neotoma   albigula       259
+## 10  1985 Neotoma   albigula       225
+## # … with 17 more rows</code></pre>
+<div id="reshaping-with-gather-and-spread" class="section level3">
+<h3>Reshaping with gather and spread</h3>
+<pre class="r"><code>surveys_gw &lt;- surveys %&gt;%
+  filter(!is.na(weight)) %&gt;%
+  group_by(plot_id, genus) %&gt;%
+  summarize(mean_weight = mean(weight))</code></pre>
+<pre><code>## `summarise()` regrouping output by &#39;plot_id&#39; (override with `.groups` argument)</code></pre>
+<pre class="r"><code>surveys_spread &lt;- surveys_gw %&gt;%
+  spread(key = genus, value = mean_weight)
+str(surveys_spread)</code></pre>
+<pre><code>## tibble [24 × 11] (S3: grouped_df/tbl_df/tbl/data.frame)
+##  $ plot_id        : num [1:24] 1 2 3 4 5 6 7 8 9 10 ...
+##  $ Baiomys        : num [1:24] 7 6 8.61 NA 7.75 ...
+##  $ Chaetodipus    : num [1:24] 22.2 25.1 24.6 23 18 ...
+##  $ Dipodomys      : num [1:24] 60.2 55.7 52 57.5 51.1 ...
+##  $ Neotoma        : num [1:24] 156 169 158 164 190 ...
+##  $ Onychomys      : num [1:24] 27.7 26.9 26 28.1 27 ...
+##  $ Perognathus    : num [1:24] 9.62 6.95 7.51 7.82 8.66 ...
+##  $ Peromyscus     : num [1:24] 22.2 22.3 21.4 22.6 21.2 ...
+##  $ Reithrodontomys: num [1:24] 11.4 10.7 10.5 10.3 11.2 ...
+##  $ Sigmodon       : num [1:24] NA 70.9 65.6 82 82.7 ...
+##  $ Spermophilus   : num [1:24] NA NA NA NA NA NA NA NA NA NA ...
+##  - attr(*, &quot;groups&quot;)= tibble [24 × 2] (S3: tbl_df/tbl/data.frame)
+##   ..$ plot_id: num [1:24] 1 2 3 4 5 6 7 8 9 10 ...
+##   ..$ .rows  : list&lt;int&gt; [1:24] 
+##   .. ..$ : int 1
+##   .. ..$ : int 2
+##   .. ..$ : int 3
+##   .. ..$ : int 4
+##   .. ..$ : int 5
+##   .. ..$ : int 6
+##   .. ..$ : int 7
+##   .. ..$ : int 8
+##   .. ..$ : int 9
+##   .. ..$ : int 10
+##   .. ..$ : int 11
+##   .. ..$ : int 12
+##   .. ..$ : int 13
+##   .. ..$ : int 14
+##   .. ..$ : int 15
+##   .. ..$ : int 16
+##   .. ..$ : int 17
+##   .. ..$ : int 18
+##   .. ..$ : int 19
+##   .. ..$ : int 20
+##   .. ..$ : int 21
+##   .. ..$ : int 22
+##   .. ..$ : int 23
+##   .. ..$ : int 24
+##   .. ..@ ptype: int(0) 
+##   ..- attr(*, &quot;.drop&quot;)= logi TRUE</code></pre>
+<pre class="r"><code>surveys_gw %&gt;%
+  spread(genus, mean_weight, fill = 0) %&gt;%
+  head()</code></pre>
+<pre><code>## # A tibble: 6 x 11
+## # Groups:   plot_id [6]
+##   plot_id Baiomys Chaetodipus Dipodomys Neotoma Onychomys Perognathus Peromyscus
+##     &lt;dbl&gt;   &lt;dbl&gt;       &lt;dbl&gt;     &lt;dbl&gt;   &lt;dbl&gt;     &lt;dbl&gt;       &lt;dbl&gt;      &lt;dbl&gt;
+## 1       1    7           22.2      60.2    156.      27.7        9.62       22.2
+## 2       2    6           25.1      55.7    169.      26.9        6.95       22.3
+## 3       3    8.61        24.6      52.0    158.      26.0        7.51       21.4
+## 4       4    0           23.0      57.5    164.      28.1        7.82       22.6
+## 5       5    7.75        18.0      51.1    190.      27.0        8.66       21.2
+## 6       6    0           24.9      58.6    180.      25.9        7.81       21.8
+## # … with 3 more variables: Reithrodontomys &lt;dbl&gt;, Sigmodon &lt;dbl&gt;,
+## #   Spermophilus &lt;dbl&gt;</code></pre>
+</div>
+<div id="gathering" class="section level3">
+<h3>Gathering</h3>
+<pre class="r"><code>surveys_gather &lt;- surveys_spread %&gt;%
+  gather(key = &quot;genus&quot;, value = &quot;mean_weight&quot;, -plot_id)
+str(surveys_gather)</code></pre>
+<pre><code>## tibble [240 × 3] (S3: grouped_df/tbl_df/tbl/data.frame)
+##  $ plot_id    : num [1:240] 1 2 3 4 5 6 7 8 9 10 ...
+##  $ genus      : chr [1:240] &quot;Baiomys&quot; &quot;Baiomys&quot; &quot;Baiomys&quot; &quot;Baiomys&quot; ...
+##  $ mean_weight: num [1:240] 7 6 8.61 NA 7.75 ...
+##  - attr(*, &quot;groups&quot;)= tibble [24 × 2] (S3: tbl_df/tbl/data.frame)
+##   ..$ plot_id: num [1:24] 1 2 3 4 5 6 7 8 9 10 ...
+##   ..$ .rows  : list&lt;int&gt; [1:24] 
+##   .. ..$ : int [1:10] 1 25 49 73 97 121 145 169 193 217
+##   .. ..$ : int [1:10] 2 26 50 74 98 122 146 170 194 218
+##   .. ..$ : int [1:10] 3 27 51 75 99 123 147 171 195 219
+##   .. ..$ : int [1:10] 4 28 52 76 100 124 148 172 196 220
+##   .. ..$ : int [1:10] 5 29 53 77 101 125 149 173 197 221
+##   .. ..$ : int [1:10] 6 30 54 78 102 126 150 174 198 222
+##   .. ..$ : int [1:10] 7 31 55 79 103 127 151 175 199 223
+##   .. ..$ : int [1:10] 8 32 56 80 104 128 152 176 200 224
+##   .. ..$ : int [1:10] 9 33 57 81 105 129 153 177 201 225
+##   .. ..$ : int [1:10] 10 34 58 82 106 130 154 178 202 226
+##   .. ..$ : int [1:10] 11 35 59 83 107 131 155 179 203 227
+##   .. ..$ : int [1:10] 12 36 60 84 108 132 156 180 204 228
+##   .. ..$ : int [1:10] 13 37 61 85 109 133 157 181 205 229
+##   .. ..$ : int [1:10] 14 38 62 86 110 134 158 182 206 230
+##   .. ..$ : int [1:10] 15 39 63 87 111 135 159 183 207 231
+##   .. ..$ : int [1:10] 16 40 64 88 112 136 160 184 208 232
+##   .. ..$ : int [1:10] 17 41 65 89 113 137 161 185 209 233
+##   .. ..$ : int [1:10] 18 42 66 90 114 138 162 186 210 234
+##   .. ..$ : int [1:10] 19 43 67 91 115 139 163 187 211 235
+##   .. ..$ : int [1:10] 20 44 68 92 116 140 164 188 212 236
+##   .. ..$ : int [1:10] 21 45 69 93 117 141 165 189 213 237
+##   .. ..$ : int [1:10] 22 46 70 94 118 142 166 190 214 238
+##   .. ..$ : int [1:10] 23 47 71 95 119 143 167 191 215 239
+##   .. ..$ : int [1:10] 24 48 72 96 120 144 168 192 216 240
+##   .. ..@ ptype: int(0) 
+##   ..- attr(*, &quot;.drop&quot;)= logi TRUE</code></pre>
+<pre class="r"><code>surveys_spread %&gt;%
+  gather(key = &quot;genus&quot;, value = &quot;mean_weight&quot;, Baiomys:Spermophilus) %&gt;%
+  head()</code></pre>
+<pre><code>## # A tibble: 6 x 3
+## # Groups:   plot_id [6]
+##   plot_id genus   mean_weight
+##     &lt;dbl&gt; &lt;chr&gt;         &lt;dbl&gt;
+## 1       1 Baiomys        7   
+## 2       2 Baiomys        6   
+## 3       3 Baiomys        8.61
+## 4       4 Baiomys       NA   
+## 5       5 Baiomys        7.75
+## 6       6 Baiomys       NA</code></pre>
+</div>
+<div id="challenge-3" class="section level3">
+<h3>Challenge</h3>
+</div>
+</div>
+<div id="section-2" class="section level1">
+<h1>1</h1>
+<pre class="r"><code>surveys_spread_genera &lt;- surveys %&gt;%
+  group_by(plot_id, year) %&gt;%
+  summarize(n_genera = n_distinct(genus)) %&gt;%
+  spread(year, n_genera)</code></pre>
+<pre><code>## `summarise()` regrouping output by &#39;plot_id&#39; (override with `.groups` argument)</code></pre>
+<pre class="r"><code>head(surveys_spread_genera)</code></pre>
+<pre><code>## # A tibble: 6 x 27
+## # Groups:   plot_id [6]
+##   plot_id `1977` `1978` `1979` `1980` `1981` `1982` `1983` `1984` `1985` `1986`
+##     &lt;dbl&gt;  &lt;int&gt;  &lt;int&gt;  &lt;int&gt;  &lt;int&gt;  &lt;int&gt;  &lt;int&gt;  &lt;int&gt;  &lt;int&gt;  &lt;int&gt;  &lt;int&gt;
+## 1       1      2      3      4      7      5      6      7      6      4      3
+## 2       2      6      6      6      8      5      9      9      9      6      4
+## 3       3      5      6      4      6      6      8     10     11      7      6
+## 4       4      4      4      3      4      5      4      6      3      4      3
+## 5       5      4      3      2      5      4      6      7      7      3      1
+## 6       6      3      4      3      4      5      9      9      7      5      6
+## # … with 16 more variables: `1987` &lt;int&gt;, `1988` &lt;int&gt;, `1989` &lt;int&gt;,
+## #   `1990` &lt;int&gt;, `1991` &lt;int&gt;, `1992` &lt;int&gt;, `1993` &lt;int&gt;, `1994` &lt;int&gt;,
+## #   `1995` &lt;int&gt;, `1996` &lt;int&gt;, `1997` &lt;int&gt;, `1998` &lt;int&gt;, `1999` &lt;int&gt;,
+## #   `2000` &lt;int&gt;, `2001` &lt;int&gt;, `2002` &lt;int&gt;</code></pre>
+</div>
+<div id="section-3" class="section level1">
+<h1>2</h1>
+<pre class="r"><code>surveys_spread_genera %&gt;%
+  gather(&quot;year&quot;, &quot;n_genera&quot;, -plot_id)</code></pre>
+<pre><code>## # A tibble: 624 x 3
+## # Groups:   plot_id [24]
+##    plot_id year  n_genera
+##      &lt;dbl&gt; &lt;chr&gt;    &lt;int&gt;
+##  1       1 1977         2
+##  2       2 1977         6
+##  3       3 1977         5
+##  4       4 1977         4
+##  5       5 1977         4
+##  6       6 1977         3
+##  7       7 1977         3
+##  8       8 1977         2
+##  9       9 1977         3
+## 10      10 1977         1
+## # … with 614 more rows</code></pre>
+</div>
+<div id="section-4" class="section level1">
+<h1>3</h1>
+<pre class="r"><code>surveys_long &lt;- surveys %&gt;%
+  gather(&quot;measurement&quot;, &quot;value&quot;, hindfoot_length, weight)</code></pre>
+</div>
+<div id="section-5" class="section level1">
+<h1>4</h1>
+<pre class="r"><code>surveys_long %&gt;%
+  group_by(year, measurement, plot_type) %&gt;%
+  summarize(mean_value = mean(value, na.rm=TRUE)) %&gt;%
+  spread(measurement, mean_value)</code></pre>
+<pre><code>## `summarise()` regrouping output by &#39;year&#39;, &#39;measurement&#39; (override with `.groups` argument)</code></pre>
+<pre><code>## # A tibble: 130 x 4
+## # Groups:   year [26]
+##     year plot_type                 hindfoot_length weight
+##    &lt;dbl&gt; &lt;chr&gt;                               &lt;dbl&gt;  &lt;dbl&gt;
+##  1  1977 Control                              36.1   50.4
+##  2  1977 Long-term Krat Exclosure             33.7   34.8
+##  3  1977 Rodent Exclosure                     39.1   48.2
+##  4  1977 Short-term Krat Exclosure            35.8   41.3
+##  5  1977 Spectab exclosure                    37.2   47.1
+##  6  1978 Control                              38.1   70.8
+##  7  1978 Long-term Krat Exclosure             22.6   35.9
+##  8  1978 Rodent Exclosure                     37.8   67.3
+##  9  1978 Short-term Krat Exclosure            36.9   63.8
+## 10  1978 Spectab exclosure                    42.3   80.1
+## # … with 120 more rows</code></pre>
+<div id="exporting-data" class="section level3">
+<h3>Exporting data</h3>
+<pre class="r"><code>surveys_complete &lt;- surveys %&gt;%
+  filter(!is.na(weight),           
+         !is.na(hindfoot_length),  
+         !is.na(sex))                </code></pre>
+<pre class="r"><code>species_counts &lt;- surveys_complete %&gt;%
+    count(species_id) %&gt;% 
+    filter(n &gt;= 50)
+
+
+surveys_complete &lt;- surveys_complete %&gt;%
+  filter(species_id %in% species_counts$species_id)
+dim(surveys_complete)</code></pre>
+<pre><code>## [1] 30463    13</code></pre>
+<pre class="r"><code>write_csv(surveys_complete, path = &quot;data/surveys_complete.csv&quot;)</code></pre>
+</div>
 </div>
 
 
