--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@ summary {
 <p><a href="Lab3B.html">Lab 3B</a></p>
 <p><a href="Lab4A.html">Lab 4A</a></p>
 <p><a href="Lab4B.html">Lab 4B</a></p>
+<p><a href="DataVisualization.html">Data Visualization</a></p>
 <p>Application written in R <span class="citation">(R Core Team 2015)</span></p>
 <div id="references" class="section level1 unnumbered">
 <h1>References</h1>
