--- a/Lab3B.html
+++ b/Lab3B.html
@@ -367,12 +367,12 @@ summary {
 
 
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.3.2     ✓ purrr   0.3.4
 ## ✓ tibble  3.0.3     ✓ dplyr   1.0.2
 ## ✓ tidyr   1.1.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.5.0</code></pre>
-<pre><code>## ── Conflicts ───────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ───────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>download.file(url=&quot;https://ndownloader.figshare.com/files/2292169&quot;,
@@ -453,29 +453,6 @@ destfile = &quot;data/portal_data_joined.csv&quot;) </code></pre>
 ## #   taxa &lt;chr&gt;, plot_type &lt;chr&gt;</code></pre>
 <div id="pipes" class="section level3">
 <h3>Pipes</h3>
-<pre class="r"><code>surveys %&gt;%
-  filter(weight &lt; 5) %&gt;%
-  select(species_id, sex, weight)</code></pre>
-<pre><code>## # A tibble: 17 x 3
-##    species_id sex   weight
-##    &lt;chr&gt;      &lt;chr&gt;  &lt;dbl&gt;
-##  1 PF         F          4
-##  2 PF         F          4
-##  3 PF         M          4
-##  4 RM         F          4
-##  5 RM         M          4
-##  6 PF         &lt;NA&gt;       4
-##  7 PP         M          4
-##  8 RM         M          4
-##  9 RM         M          4
-## 10 RM         M          4
-## 11 PF         M          4
-## 12 PF         F          4
-## 13 RM         M          4
-## 14 RM         M          4
-## 15 RM         F          4
-## 16 RM         M          4
-## 17 RM         M          4</code></pre>
 <pre class="r"><code>surveys_sml &lt;- surveys %&gt;%
   filter(weight &lt; 5) %&gt;%
   select(species_id, sex, weight)
