--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@ summary {
 <p><a href="Lab4B.html">Lab 4B</a></p>
 <p><a href="DataVisualization.html">Data Visualization</a></p>
 <p><a href="Lab5.html">Lab 5</a></p>
+<p><a href="Lab5A.html">Lab 5A</a></p>
 <p>Application written in R <span class="citation">(R Core Team 2015)</span></p>
 <div id="references" class="section level1 unnumbered">
 <h1>References</h1>
