--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@ summary {
 <p><a href="Lab10.html">Lab 10</a></p>
 <p><a href="lab11.html">Lab 11</a></p>
 <p><a href="lab11E.html">Lab 11 Extra</a></p>
+<p><a href="Lab12.html">Lab 12</a></p>
 <p>Application written in R <span class="citation">(R Core Team 2015)</span></p>
 <div id="references" class="section level1 unnumbered">
 <h1>References</h1>
