--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@ code span.ot { color: #007020; }
 <p><a href="Lab5A.html">Lab 5A</a></p>
 <p><a href="Lab5_Extra.html">Lab 5 Extra</a></p>
 <p><a href="Lab6.html">Lab 6</a></p>
+<div id="lab-6e-is-extra-credit" class="section level1">
+<h1>Lab 6E is extra credit</h1>
 <p><a href="Lab-7.html">Lab 7</a></p>
 <p><a href="Lab8.html">Lab 8</a></p>
 <p><a href="Lab-9.html">Lab 9</a></p>
@@ -220,6 +222,7 @@ code span.ot { color: #007020; }
 <p><a href="lab11E.html">Lab 11 Extra</a></p>
 <p><a href="Lab12.html">Lab 12</a></p>
 <p>Application written in R <span class="citation">(R Core Team 2015)</span></p>
+</div>
 <div id="references" class="section level1 unnumbered">
 <h1>References</h1>
 <div id="refs" class="references">
