--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ code span.ot { color: #007020; }
 <p><a href="Lab6.html">Lab 6</a></p>
 <p><a href="Lab-7.html">Lab 7</a></p>
 <p><a href="Lab8.html">Lab 8</a></p>
-<p><a href="Lab99.html">Lab 9</a></p>
+<p><a href="lab99.html">Lab 9</a></p>
 <p><a href="Lab9Extra.html">Lab 9 Extra</a></p>
 <p><a href="Lab10.html">Lab 10</a></p>
 <p><a href="lab11.html">Lab 11</a></p>
